# python_package_template

./: .coverage  .gitignore  .readthedocs.yaml  MAKEFILE_README.md  Makefile  README.md  configure.sh  pyproject.toml  settings  settings.conf  settings.example.conf  setup.cfg
.github/: dependabot.yaml
.github/workflows/: main.yml
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/reference/: impkg.doctree  impkg.harmonic_mean.doctree  impkg.harmony.doctree  impkg.hello.doctree  modules.doctree
docs/_build/_sources/reference/: impkg.rst.txt  modules.rst.txt
docs/_build/reference/: impkg.harmonic_mean.html  impkg.harmony.html  impkg.hello.html  impkg.html  modules.html
docs/reference/: impkg.harmonic_mean.rst  impkg.harmony.rst  impkg.hello.rst
